<resources>
    <string name="app_name">Wheeler Dealer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="viewInventoryTitle">View Inventory</string>
    <string name="bookAppointmentTitle">Book Appointment</string>
    <string name="meetTheTeamTitle">Meet The Team</string>
    <string name="homepageTitle">Home Page</string>
    <string name="creditsTitle">Credits</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="workEmail">info@wheelerdealer.ca</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hint">Please enter your first name</string>
    <string name="first_name_blank">First Name cannot be left blank</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">Please enter your last name</string>
    <string name="last_name_blank">Last Name cannot be left blank</string>
    <string name="email">Email Address</string>
    <string name="email_hint">example@company.com</string>
    <string name="email_waring">Must follow name@website.com</string>
    <string name="email_blank">Email Address cannot be left blank</string>
    <string name="phone">Phone Number</string>
    <string name="phone_hint">(555)555\-5555</string>
    <string name="phone_warning">Must follow (555)555\-5555 or 1234567890</string>
    <string name="phone_blank">Phone Number cannot be left blank</string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="contact_info_header">Contact Information</string>
    <string name="vehicle_info_header">Vehicle Information</string>
    <string name="brandText">Brand</string>
    <string name="modelText">Model</string>
    <string name="vinText">VIN Number</string>
    <string name="vin_blank">VIN Number cannot be left blank</string>
    <string name="kmText">Kilometers</string>
    <string name="km_blank">Kilometers cannot be left blank</string>
    <string name="issue_info_header">Appointment Information</string>
    <string name="date_title">Date</string>
    <string name="date_hint">Pick an appointment date</string>
    <string name="date_empty">Date cannot be left blank</string>
    <string name="time_title">Time</string>
    <string name="time_hint">Pick an appointment time</string>
    <string name="time_empty">Time cannot be left blank</string>
    <string name="issue_title">Vehicle Issue</string>
    <string name="issue_hint">Issues and/or work required</string>
    <string name="issue_empty">Vehicle Issue cannot be left blank</string>
    <string name="title_vehicle_list">Vehicles</string>
    <string name="title_vehicle_detail">Vehicle Detail</string>
    <string name="submit_button">Submit</string>
    <string name="issueInfoHeader">Appointment</string>
    <string name="main_visit_website">Visit our website!</string>
    <string name="main_visit_location">Visit our location!</string>
    <string name="main_visit_facebook">Visit our Facebook!</string>
    <string name="main_visit_twitter">Visit our Twitter!</string>
    <string name="main_call_us">Give us a call!</string>
    <string-array name="brand_array">
        <item>Brand</item>
        <item>BMW</item>
        <item>Mercedes</item>
        <item>Jeep</item>
        <item>Ford</item>
        <item>GMC</item>
        <item>Chevrolet</item>
        <item>RAM</item>
        <item>Toyota</item>
    </string-array>
    <string-array name="model_blank_array">
        <item>Model</item>
    </string-array>
    <string-array name="bmw_model_array">
        <item>Model</item>
        <item>2 series</item>
        <item>3 series</item>
        <item>5 series</item>
        <item>6 series</item>
        <item>7 series</item>
        <item>X3</item>
        <item>X5</item>
    </string-array>
    <string-array name="jeep_model_array">
        <item>Model</item>
        <item>Wrangler JK</item>
        <item>Grand Cherokee</item>
        <item>Gladiator</item>
        <item>Compass</item>
        <item>Cherokee</item>
    </string-array>
    <string-array name="mercedes_model_array">
        <item>Model</item>
        <item>C class</item>
        <item>E class</item>
        <item>GLC</item>
        <item>GLE</item>
        <item>G class</item>
        <item>S class</item>
    </string-array>
    <string-array name="ford_model_array">
        <item>Model</item>
        <item>Escape</item>
        <item>Explorer</item>
        <item>Expedition</item>
        <item>F150</item>
        <item>F250</item>
        <item>F350</item>
        <item>F450</item>
    </string-array>
    <string-array name="gmc_model_array">
        <item>Model</item>
        <item>Sierra 1500</item>
        <item>Sierra 2500HD</item>
        <item>Sierra 3500HD</item>
        <item>Terrain</item>
    </string-array>
    <string-array name="chev_model_array">
        <item>Model</item>
        <item>Silverado 1500</item>
        <item>Silverado 2500HD</item>
        <item>Silverado 3500HD</item>
        <item>Equinox</item>
        <item>Avalanche</item>
    </string-array>
    <string-array name="ram_model_array">
        <item>Model</item>
        <item>1500</item>
        <item>2500HD</item>
        <item>3500HD</item>
        <item>Promaster</item>
    </string-array>
    <string-array name="toyota_model_array">
        <item>Model</item>
        <item>Avalon</item>
        <item>Camry</item>
        <item>4Runner</item>
        <item>Rav4</item>
        <item>Tacoma</item>
        <item>Tundra</item>
    </string-array>
    <string-array name="pref_model_array">
        <item>Model</item>
        <item>2 series</item>
        <item>3 series</item>
        <item>5 series</item>
        <item>6 series</item>
        <item>7 series</item>
        <item>X3</item>
        <item>X5</item>
        <item>Wrangler JK</item>
        <item>Grand Cherokee</item>
        <item>Gladiator</item>
        <item>Compass</item>
        <item>Cherokee</item>
        <item>Wrangler JK</item>
        <item>Grand Cherokee</item>
        <item>Gladiator</item>
        <item>Compass</item>
        <item>Cherokee</item>
        <item>C class</item>
        <item>E class</item>
        <item>GLC</item>
        <item>GLE</item>
        <item>G class</item>
        <item>S class</item>
        <item>Escape</item>
        <item>Explorer</item>
        <item>Expedition</item>
        <item>F150</item>
        <item>F250</item>
        <item>F350</item>
        <item>F450</item>
        <item>Sierra 1500</item>
        <item>Sierra 2500HD</item>
        <item>Sierra 3500HD</item>
        <item>Terrain</item>
        <item>Silverado 1500</item>
        <item>Silverado 2500HD</item>
        <item>Silverado 3500HD</item>
        <item>Equinox</item>
        <item>Avalanche</item>
        <item>1500</item>
        <item>2500HD</item>
        <item>3500HD</item>
        <item>Promaster</item>
        <item>Avalon</item>
        <item>Camry</item>
        <item>4Runner</item>
        <item>Rav4</item>
        <item>Tacoma</item>
        <item>Tundra</item>
    </string-array>
    <string name="brand1">Jeep</string>
    <string name="model1">Wrangler</string>
    <string name="year1">2009</string>
    <string name="price1">$20,000</string>
    <string name="description1">An SUV with 4wd that can go anywhere. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc luctus ut turpis quis bibendum. Quisque faucibus convallis mauris quis bibendum. Nunc sed nisi est. Cras posuere nec nisi a vestibulum. In ullamcorper tincidunt lorem et tincidunt. Maecenas at risus eleifend, ultrices ipsum feugiat, vulputate quam. Maecenas dignissim risus ac egestas mollis. Proin sagittis lorem augue, a volutpat tellus dictum quis. Vestibulum non urna id nunc ullamcorper rhoncus. Duis hendrerit dolor euismod dui pulvinar sollicitudin. Stock#: 0001</string>
    <string name="brand2">Ford</string>
    <string name="model2">Mustang</string>
    <string name="year2">2015</string>
    <string name="price2">$25,000</string>
    <string name="description2">A sporty car. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc luctus ut turpis quis bibendum. Quisque faucibus convallis mauris quis bibendum. Nunc sed nisi est. Cras posuere nec nisi a vestibulum. In ullamcorper tincidunt lorem et tincidunt. Maecenas at risus eleifend, ultrices ipsum feugiat, vulputate quam. Maecenas dignissim risus ac egestas mollis. Proin sagittis lorem augue, a volutpat tellus dictum quis. Vestibulum non urna id nunc ullamcorper rhoncus. Duis hendrerit dolor euismod dui pulvinar sollicitudin. Stock#: 0002</string>
    <string name="brand3">GMC</string>
    <string name="model3">Yukon</string>
    <string name="year3">2018</string>
    <string name="price3">$30,000</string>
    <string name="description3">A roomy luxurious suv. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc luctus ut turpis quis bibendum. Quisque faucibus convallis mauris quis bibendum. Nunc sed nisi est. Cras posuere nec nisi a vestibulum. In ullamcorper tincidunt lorem et tincidunt. Maecenas at risus eleifend, ultrices ipsum feugiat, vulputate quam. Maecenas dignissim risus ac egestas mollis. Proin sagittis lorem augue, a volutpat tellus dictum quis. Vestibulum non urna id nunc ullamcorper rhoncus. Duis hendrerit dolor euismod dui pulvinar sollicitudin. Stock#: 0003</string>
    <string name="brand4">MINI</string>
    <string name="model4">Cooper S</string>
    <string name="year4">2005</string>
    <string name="price4">$8,000</string>
    <string name="description4">A zippy little car. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc luctus ut turpis quis bibendum. Quisque faucibus convallis mauris quis bibendum. Nunc sed nisi est. Cras posuere nec nisi a vestibulum. In ullamcorper tincidunt lorem et tincidunt. Maecenas at risus eleifend, ultrices ipsum feugiat, vulputate quam. Maecenas dignissim risus ac egestas mollis. Proin sagittis lorem augue, a volutpat tellus dictum quis. Vestibulum non urna id nunc ullamcorper rhoncus. Duis hendrerit dolor euismod dui pulvinar sollicitudin. Stock#: 0004</string>
    <string name="brand5">Brand</string>
    <string name="model5">Model</string>
    <string name="year5">Year</string>
    <string name="price5">Price</string>
    <string name="description5">Description</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">Contact Information</string>
    <string name="pref_title_first_name">First Name</string>
    <string name="pref_default_first_name"></string>
    <string name="pref_title_last_name">Last Name</string>
    <string name="pref_default_last_name"></string>
    <string name="pref_title_email">Email Address</string>
    <string name="pref_default_email"></string>
    <string name="pref_title_phone">Phone Number</string>
    <string name="pref_default_phone"></string>
    <string name="pref_header_vehicle">Vehicle Information</string>
    <string name="pref_title_brand">Brand</string>
    <string name="pref_title_model">Model</string>
    <string name="pref_title_vin">VIN</string>
    <string name="pref_default_vin"></string>
    <string name="pref_title_km">Kilometers</string>
    <string name="pref_default_km"></string>
    <string name="pref_title_delete">Delete Information</string>
</resources>