<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_first_name"
        android:inputType="textCapWords"
        android:key="fName"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_first_name" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_last_name"
        android:inputType="textCapWords"
        android:key="lName"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_last_name" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_email"
        android:inputType="textEmailAddress"
        android:key="email"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_email" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_phone"
        android:inputType="phone"
        android:key="phone"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_phone" />

    <Preference
        android:icon="@drawable/ic_delete_forever_black_24dp"
        android:key="deleteCust"
        android:title="@string/pref_title_delete" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
