<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_viewInv"
            android:icon="@drawable/ic_search_inv"
            android:title="@string/viewInventoryTitle" />
        <item
            android:id="@+id/nav_bookAppt"
            android:icon="@drawable/ic_book_appt"
            android:title="@string/bookAppointmentTitle" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_meetTheTeam"
                android:icon="@drawable/ic_meet_team"
                android:title="@string/meetTheTeamTitle" />
            <item
                android:id="@+id/nav_visitUs"
                android:icon="@drawable/ic_visit_us"
                android:title="@string/visitUsTitle" />
            <item
                android:id="@+id/nav_credits"
                android:icon="@drawable/ic_credits"
                android:title="@string/creditsTitle" />
        </menu>
    </item>

</menu>
