<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".BookAppointmentFragment">

    <TextView
        android:id="@+id/issueInfoHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="bottom|center"
        android:text="@string/issue_info_header"
        android:textColor="@color/color_black"
        android:textSize="@dimen/heading_font_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_weight="1"
        android:background="@color/color_white"
        android:clickable="true"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:hint="@string/date_hint"
        android:inputType="date"
        android:singleLine="true"
        android:textColor="@color/color_black" />


    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_weight="0"
        android:text="@string/date_title"
        android:textColor="@color/color_black" />

    <EditText
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_weight="1"
        android:background="@color/color_white"
        android:clickable="true"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:hint="@string/time_hint"
        android:inputType="time"
        android:singleLine="true"
        android:textColor="@color/color_black" />

    <TextView
        android:id="@+id/timeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_weight="0"
        android:text="@string/time_title"
        android:textColor="@color/color_black" />

    <EditText
        android:id="@+id/issue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_weight="1"
        android:background="@color/color_white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/issue_hint"
        android:inputType="textMultiLine"
        android:textColor="@color/color_black" />

    <TextView
        android:id="@+id/issueText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_weight="0"
        android:text="@string/issue_title"
        android:textColor="@color/color_black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backButtonIssue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_back_button"
            android:layout_margin="@dimen/form_margin"
            android:layout_weight="1"
            android:text="@string/back_button" />

        <Button
            android:id="@+id/submitButtonIssue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:layout_margin="@dimen/form_margin"
            android:text="@string/submit_button" />

    </LinearLayout>

</LinearLayout>