<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".BookAppointmentFragment">

    <TextView
        android:id="@+id/contactInfoHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="bottom|center"
        android:text="@string/contact_info_header"
        android:textColor="@color/color_black"
        android:textSize="@dimen/heading_font_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="@color/color_white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/body_font_size"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/fNameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_weight="0"
        android:text="@string/first_name"
        android:textColor="@color/color_black" />

    <EditText
        android:id="@+id/lName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="@color/color_white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/color_black"
        android:textSize="@dimen/body_font_size"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/lNameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_weight="0"
        android:text="@string/last_name"
        android:textColor="@color/color_black" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="@color/color_white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="@color/color_black"
        android:textSize="@dimen/body_font_size"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_weight="0"
        android:text="@string/email"
        android:textColor="@color/color_black" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="@color/color_white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:singleLine="true"
        android:textColor="@color/color_black"
        android:textSize="@dimen/body_font_size"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/phoneTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_weight="0"
        android:text="@string/phone"
        android:textColor="@color/color_black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nextButtonContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:layout_margin="@dimen/form_margin"
            android:layout_weight="0"
            android:text="@string/next_button" />
    </LinearLayout>

</LinearLayout>