<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".BookAppointmentFragment">

    <TextView
        android:id="@+id/vehicleInfoHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="bottom|center"
        android:text="@string/vehicle_info_header"
        android:textColor="@color/color_black"
        android:textSize="@dimen/heading_font_size"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/brandSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/brand_array"
        android:gravity="center" />

    <Spinner
        android:id="@+id/modelSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/model_blank_array"
        android:gravity="center" />

    <EditText
        android:id="@+id/vinInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="bottom|center"
        android:hint="@string/vinText"
        android:inputType="text"
        android:textColor="@color/color_black"
        android:textSize="@dimen/body_font_size" />

    <TextView
        android:id="@+id/vinNumTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/vinText"
        android:textColor="@color/color_black" />

    <EditText
        android:id="@+id/kmInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="bottom|center"
        android:hint="@string/kmText"
        android:inputType="number"
        android:textColor="@color/color_black"
        android:textSize="@dimen/body_font_size" />

    <TextView
        android:id="@+id/kmTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/kmText"
        android:textColor="@color/color_black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backButtonVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="@dimen/form_margin"
            android:layout_weight="0"
            android:text="@string/back_button" />

        <Button
            android:id="@+id/nextButtonVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/form_margin"
            android:layout_weight="0"
            android:text="@string/next_button" />
    </LinearLayout>

</LinearLayout>